# ti-rpmsg-char

./: .gitignore  README  TI_RPMsg_Char_0.1.0_manifest.html  configure.ac
.github/workflows/: build-deb.yml
debian/: changelog  control  rules
examples/: .gitignore  Makefile.am  README  rpmsg_char_benchmark.c  rpmsg_char_simple.c
include/: rproc_id.h  ti_rpmsg_char.h
src/: Makefile.am  rpmsg_char.c  rpmsg_char_internal.h  soc.c  ti_rpmsg_char.pc.in  utils.c
